assets/scss/uams-supporting/header.scss
.site-header {
    @extend .align-items-start;
    @extend .flex-nowrap;
    @extend .navbar-dark;
    @extend .navbar-expand-sm;
    @extend .bg-primary;
    @extend .text-light;
    @extend .py-5;
    @extend .px-8;

    @include media-breakpoint-down(xs) {
        box-shadow: $box-shadow-sm;
    }
    @include media-breakpoint-up(sm) {
        z-index: 1;
    }

    .global-title {
        @extend .d-flex;
        @extend .flex-column;
        @extend .flex-lg-row;
        @extend .align-items-start;
        @extend .mr-auto;

        .navbar-brand {
            padding: 0;
            margin: 0 0 $spacer-min 0;
            flex-shrink: 0;
                
            @include media-breakpoint-up(lg) {
                padding: 0 15px 0 0;
                margin: 0;
                border-right: 2px solid;
            }

            img {
                height: 40px;

                @include media-breakpoint-up(sm) {
                    height: 50px;
                }
            }
        }
        .navbar-subbrand {
            margin: 0;
                
            @include media-breakpoint-up(lg) {
                padding: 0 0 0 15px;

                border-left: 2px solid;
                margin: 0 0 0 -2px;
            }

    
            .parent,
            .title {
                @extend .d-block;
                @extend .text-reset;
            }
            .parent {
                font-size: 16px;
                line-height: 1.2;
                margin: 0;
                padding: 3.5px 0;

                @include media-breakpoint-up(sm) {
                    font-size: 19px;
                    padding: 2px 0;
                }

                @include media-breakpoint-up(lg) {
                    font-size: 16px;
                    line-height: 1;
                    margin: 0;
                    padding: 0;
                }

                ~ .title {
                    padding: 0;
                }
            }
            .title {
                font-size: 24px;
                line-height: 1.2;

                @include media-breakpoint-up(sm) {
                    font-size: 35px;
                    padding: 4px 0;
                }

                @include media-breakpoint-up(lg) {
                    margin: 0 0 -8px;
                }
            }
        }
    }

    .header-nav {
        @extend .d-flex;
        @extend .flex-nowrap;
        padding: 4px 0;

        @include media-breakpoint-up(sm) {
            padding: 7px 0 7px ($spacer * 2);
        }

        @include media-breakpoint-down(md) {
            position: absolute;
            right: $spacer * 2;
        }

        .nav {
            @extend .flex-nowrap;
        }

        .nav-item {
            @extend .d-flex;
            &:not(:first-child) {
                margin-left: $spacer-min;
            }
        }

        .nav-link {
            @extend .p-1;
            @extend .text-reset;
        }

        .resource-nav {
            @extend .d-flex;
            @extend .flex-nowrap;
            margin-left: $spacer-min;

            .nav-link {
                @extend .d-flex;
                @extend .align-items-center;
            }
        }
    }

    .navbar-toggler {
        margin-left: $spacer-min;
    }

    #nav-secondary {
        flex-grow: 0;
    }
}
.site-nav {
    padding: 0;
    
    .navbar-nav {
        line-height: 1;
        @extend .w-100;
        @extend .px-sm-6;
        @extend .py-sm-5;
        @extend .shadow-sm;
        @extend .font-weight-medium;
        @extend .bg-white;
    
        @include media-breakpoint-down(xs) {
            padding: ($spacer * 0.5) ($spacer * 1.5);
        }

        .nav-item {
            &:not(:last-child) {
                padding-bottom: $spacer-min / 2;
                border-bottom: 1px solid gray("200");
    
                @include media-breakpoint-up(sm) {
                    padding-bottom: 0;
                    padding-right: $spacer-min / 2;
                    border-bottom: 0;
                    border-right: 1px solid gray("200");
                }
            }
            &:not(:first-child) {
                padding-top: $spacer-min / 2;

                @include media-breakpoint-up(sm) {
                    padding-top: 0;
                    padding-left: $spacer-min / 2;
                }
            }
    
            a {
                @include font-size(1.3125rem);
        
                @include media-breakpoint-down(xs) {
                    padding: ($spacer * .5);
                }
            }
        }
    }
}

